--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
   <!-- favicon для PNG -->
 <link rel="icon" type="image/png" href="img/favicon_32x322.png">
+  <!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>3DNA  – Visual Marketing Branding y Experiencias Inmersivas 3D </title>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
+
+  <!-- favicon для PNG -->
+<link rel="icon" type="image/png" href="img/favicon_32x322.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -799,6 +813,504 @@ h1, h2, .hero-title {
 
 
   </style>
+
+ 
+
+  <header>
+  <div class="site-title-wrapper">
+    <div class="site-title">3DNA</div>
+    <div class="site-subtitle">Marketing y Publicidad</div>
+  </div>
+  <div class="lang-select">
+    <button onclick="setLang('es')" id="btn-es">ES</button>
+    <button onclick="setLang('en')" id="btn-en">EN</button>
+    <button onclick="setLang('ar')" id="btn-ar">AR</button>
+  </div>
+</header>
+
+
+
+
+
+
+<body>
+
+<script async src="https://cdn.rvtr.ai/projects/683849c7e1960ae001000174/683849c7e1960ae001000176.js"></script>
+
+
+
+<!-- Cookie Banner -->
+<div id="cookie-banner" class="cookie-banner">
+  <div class="cookie-content">
+    <span>
+      Usamos cookies para personalizar el contenido, medir anuncios y mejorar tu experiencia. 
+      Consulta nuestra <a href="#politica-cookies">Política de cookies</a>.
+    </span>
+    <div class="cookie-buttons">
+      <button id="accept-cookies">Aceptar todas</button>
+      <button id="config-cookies">Configurar</button>
+      <button id="reject-cookies">Rechazar</button>
+    </div>
+  </div>
+</div>
+
+<!-- Cookie Settings Modal -->
+<div id="cookie-modal" class="cookie-modal">
+  <div class="cookie-modal-content">
+    <h2>Configuración de cookies</h2>
+    <p class="modal-desc">
+      Selecciona qué tipos de cookies deseas permitir. Puedes cambiar esta configuración en cualquier momento.
+    </p>
+
+    <div class="cookie-option">
+      <label>
+        <input type="checkbox" checked disabled />
+        <strong>Cookies necesarias</strong><br>
+        Estas cookies son esenciales para el funcionamiento del sitio web y no se pueden desactivar.
+      </label>
+    </div>
+
+    <div class="cookie-option">
+      <label>
+        <input type="checkbox" id="analytics-cookies" />
+        <strong>Cookies de análisis</strong><br>
+        Nos permiten recopilar datos para mejorar el rendimiento del sitio.
+      </label>
+    </div>
+
+    <div class="cookie-option">
+      <label>
+        <input type="checkbox" id="ads-cookies" />
+        <strong>Cookies de publicidad</strong><br>
+        Ayudan a mostrar anuncios personalizados según tu comportamiento.
+      </label>
+    </div>
+
+    <div class="modal-buttons">
+      <button id="save-settings" class="save-btn">Guardar preferencias</button>
+      <button id="cancel-settings" class="cancel-btn">Cancelar</button>
+    </div>
+  </div>
+</div>
+<div id="cookie-overlay"></div>
+
+
+
+
+
+
+
+  <div id="lang-toggle">EN</div>
+  <section id="hero">
+    <video class="video-bg" autoplay muted loop playsinline>
+  <source src="img/screen7.mp4" type="video/mp4">
+</video>
+
+    <div class="overlay"></div>
+    <div class="content">
+  <!-- Логотип отдельно, с отступом сверху -->
+  <div class="logo-container" style="
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15vh;
+    margin-bottom: 30px;
+  ">
+    <img src="img/lg.png" alt="3DNA Logo" class="logo" />
+  </div>
+
+  <!-- Текст и кнопка — НЕ зависят от логотипа -->
+  <div class="text-wrapper" style="
+  margin-left: 5vw;
+  text-align: left;
+  max-width: 90vw;
+  margin-top: 12vh;
+  position: relative; /* обязательно для .footnote */
+">
+  <h1 class="hero-title">
+    MARKETING CREATIVO, BRANDING*, DISEÑO 3D Y PROMOCIÓN VISUAL
+  </h1>
+
+  <p class="hero-subtitle">
+    <span id="rotating-text" class="fade">LANZAMOS TU MARCA CON EXPERIENCIAS INMERSIVAS E IMPACTO REAL</span>
+  </p>
+
+  <button class="cta-button open-panel">Descúbrelo</button>
+
+<p class="footnote">
+  * El precio del branding creativo comienza desde 370 € + IVA.
+</p>
+<p class="footnote">
+  * Proyecto de conversión (Landing → Instagram → Facebook → Google Ads → Pago vía PayPal) desde <strong>890 €</strong>.
+  Consulta condiciones en el <a href="#modal-oferta" class="open-oferta">Contrato de Oferta Pública</a>.
+</p>
+
+</div>
+
+
+
+
+
+</section>
+<div class="spacer">
+  <div class="spacer-inner">
+    <h2 class="spacer-title">NUESTRA METODOLOGÍA</h2>
+    <div class="icon-line-wrapper">
+      <div class="icon-block">
+        <img src="img/icon1.png" alt="Branding">
+        <span>BRANDING</span>
+      </div>
+      <div class="line"></div>
+      <div class="icon-block">
+        <img src="img/icon2.png" alt="Diseño">
+        <span>CONVERSIÓN</span>
+      </div>
+      <div class="line"></div>
+      <div class="icon-block">
+        <img src="img/icon3.png" alt="Entrega">
+        <span> PAGOS ONLINE</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<section id="sec2">
+  <video class="video-bg" autoplay muted loop playsinline poster="img/fallback8.jpg">
+    <source src="img/screen8.mp4" type="video/mp4">
+  </video>
+  <div class="overlay"></div>
+
+  <div class="content">
+    <!-- Имитация отступа как у логотипа -->
+    <div style="height: 15vh; margin-bottom: 30px;"></div>
+
+    <!-- Текст и кнопка выровнены по левому краю -->
+    <div class="text-wrapper2">
+      <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
+      <p class="hero-subtitle">
+        <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
+      </p>
+      <button class="cta-button" onclick="alert('Entrando al showroom...')">
+        ENTRAR A SHOWROOM
+      </button>
+    </div>
+  </div>
+</section>
+
+<!-- Политика Cookies — модальное окно -->
+<div id="cookies-policy-modal" class="modal">
+  <div class="modal-content">
+    <h2>Política de Cookies</h2>
+    <div class="modal-scroll">
+      <p>
+        En <strong>3DNA</strong>, utilizamos cookies para ofrecer una mejor experiencia, mejorar nuestros servicios y mostrar publicidad personalizada.<br><br>
+        <strong>¿Qué son las cookies?</strong><br>
+        Las cookies son pequeños archivos de texto que los sitios web colocan en tu dispositivo al visitarlos. Permiten recordar tus preferencias, sesiones activas, y comportamientos con el fin de personalizar y optimizar tu experiencia.<br><br>
+        <strong>¿Qué tipos de cookies usamos?</strong><br>
+        - Cookies necesarias: esenciales para el funcionamiento técnico del sitio. No pueden desactivarse.<br>
+        - Cookies de análisis: nos permiten entender cómo se utiliza el sitio (por ejemplo, mediante Google Analytics).<br>
+        - Cookies de publicidad: nos permiten ofrecerte anuncios relevantes y medir su rendimiento.<br><br>
+        <strong>¿Cómo puedes gestionar las cookies?</strong><br>
+        Puedes aceptar o rechazar cookies desde nuestro banner de consentimiento o configurar tus preferencias manualmente. También puedes configurar tu navegador para rechazarlas o eliminarlas automáticamente.<br><br>
+        <strong>Cambiar tus preferencias</strong><br>
+        Puedes modificar tu decisión en cualquier momento accediendo nuevamente a la configuración de cookies. Además, puedes eliminar el almacenamiento local desde las herramientas del navegador.<br><br>
+        Para más información, contáctanos en <a href="mailto:andrei@3dna.es">andrei@3dna.es</a>.
+      </p>
+    </div>
+    <div style="text-align: right; margin-top: 15px;">
+      <button id="close-policy-modal" style="padding: 10px 20px;">Cerrar</button>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+<div class="spacer"></div>
+<section class="gallery">
+  <img src="https://via.placeholder.com/200x140" alt="Item 1">
+  <img src="https://via.placeholder.com/200x140" alt="Item 2">
+  <img src="https://via.placeholder.com/200x140" alt="Item 3">
+  <img src="https://via.placeholder.com/200x140" alt="Item 4">
+</section>
+<section class="form-section">
+  <h2 class="lang-es">Solicita tu propuesta</h2>
+  <h2 class="lang-en" style="display:none">Request your proposal</h2>
+  <form>
+    <input type="text" placeholder="Nombre / Name">
+    <input type="email" placeholder="Correo / Email">
+    <input type="tel" placeholder="Teléfono / Phone">
+    <textarea placeholder="Mensaje / Message"></textarea>
+    <button type="submit">Enviar / Send</button>
+  </form>
+</section>
+<div class="footer">
+  <p>📍 Salobreña · ✉️ andrei@3dna.es · 🌐 www.3dna.es</p>
+</div>
+
+<!-- Затемнение фона -->
+<div id="panel-backdrop"></div>
+
+<!-- Выезжающая панель -->
+<div id="side-panel">
+  <button id="close-panel">&times;</button>
+  
+  <div class="side-content">
+    <h2>¡Bienvenido!</h2>
+    <p>Aquí puedes descubrir más sobre nuestros servicios...</p>
+  </div>
+</div>
+
+<!-- Modal: Contrato de Oferta Pública -->
+<div id="modal-oferta" class="modal-oferta" style="display: none;">
+  <div class="modal-content">
+    <button id="close-oferta" class="modal-close">&times;</button>
+    <h2>Contrato de Oferta Pública</h2>
+    <p>Este contrato establece los términos de la oferta pública para nuestros servicios digitales.</p>
+    <p>Incluye procesos de conversión mediante campañas en Instagram, Facebook, Google Ads y métodos de pago en línea como PayPal.</p>
+    <p>Los resultados esperados, precios y condiciones específicas están detalladas en este contrato.</p>
+    <p>Para más información, contáctanos en: <a href="mailto:andrei@3dna.es">andrei@3dna.es</a></p>
+  </div>
+</div>
+
+
+
+
+
+<script>
+  // Переключение языка
+  const toggle = document.getElementById('lang-toggle');
+  const es = document.querySelectorAll('.lang-es');
+  const en = document.querySelectorAll('.lang-en');
+  let lang = 'es';
+  toggle.onclick = () => {
+    lang = lang === 'es' ? 'en' : 'es';
+    toggle.innerText = lang.toUpperCase() === 'ES' ? 'EN' : 'ES';
+    es.forEach(e => e.style.display = lang === 'es' ? 'block' : 'none');
+    en.forEach(e => e.style.display = lang === 'en' ? 'block' : 'none');
+  };
+
+  // Секция #hero — фразы
+  const phrases = [
+   
+    "Convierte cada idea en una experiencia visual inolvidable",
+    "Tu proyecto empieza con el contenido que impulsa tu marca y hace crecer tu negocio",
+    "Crea impacto. Conecta con emociones. Vende sin esfuerzo",
+    "El contenido no solo informa: inspira, transforma y enamora",
+    "Haz que tu mensaje trascienda pantallas y deje huella",
+    "No es solo marketing. Es una experiencia inmersiva",
+    "La creatividad es tu herramienta más poderosa. Úsala",
+    "Construye una marca que se vea, se sienta y se recuerde",
+    "Lo visual habla más fuerte que mil palabras",
+    "Diseña tu universo. Nosotros lo hacemos realidad",
+    "El futuro es 3D. Y empieza hoy, contigo",
+  ];
+
+  let current = 0;
+  const el = document.getElementById("rotating-text");
+
+  setInterval(() => {
+    el.classList.add("fade-out");
+    setTimeout(() => {
+      current = (current + 1) % phrases.length;
+      el.textContent = phrases[current];
+      el.classList.remove("fade-out");
+    }, 600);
+  }, 3500);
+
+  // Секция #sec2 — фразы
+  const phrasesSec2 = [
+    "Entornos virtuales",
+    "Recorridos interactivos",
+    "Experiencias en 360º",
+    "Realidad aumentada aplicada",
+    "Showroom digital sin límites",
+    "Explora tu marca desde adentro"
+  ];
+
+  let currentSec2 = 0;
+  const elSec2 = document.getElementById("rotating-text-sec2");
+
+  setInterval(() => {
+    elSec2.classList.add("fade-out");
+    setTimeout(() => {
+      currentSec2 = (currentSec2 + 1) % phrasesSec2.length;
+      elSec2.textContent = phrasesSec2[currentSec2];
+      elSec2.classList.remove("fade-out");
+    }, 600);
+  }, 3500);
+
+
+
+
+  document.addEventListener("DOMContentLoaded", () => {
+  const panel = document.getElementById('side-panel');
+  const closeBtn = document.getElementById('close-panel');
+  const backdrop = document.getElementById('panel-backdrop');
+
+  document.querySelectorAll('.open-panel').forEach(btn => {
+    btn.addEventListener('click', function (e) {
+      e.preventDefault();
+      panel.classList.add('open');
+      backdrop.classList.add('visible');
+    });
+  });
+
+  closeBtn.addEventListener('click', function () {
+    panel.classList.remove('open');
+    backdrop.classList.remove('visible');
+  });
+
+  backdrop.addEventListener('click', function () {
+    panel.classList.remove('open');
+    backdrop.classList.remove('visible');
+  });
+});
+
+document.addEventListener("DOMContentLoaded", () => {
+  const banner = document.getElementById('cookie-banner');
+  const modal = document.getElementById('cookie-modal');
+  const overlay = document.getElementById('cookie-overlay');
+
+  const accept = document.getElementById('accept-cookies');
+  const config = document.getElementById('config-cookies');
+  const reject = document.getElementById('reject-cookies');
+
+  const save = document.getElementById('save-settings');
+  const cancel = document.getElementById('cancel-settings');
+
+  // Show banner if not decided yet
+  if (!localStorage.getItem('cookiesDecision')) {
+    banner.classList.add('show');
+  }
+
+  accept.onclick = () => {
+    localStorage.setItem('cookiesDecision', JSON.stringify({
+      necessary: true,
+      analytics: true,
+      ads: true
+    }));
+    banner.classList.remove('show');
+  };
+
+  reject.onclick = () => {
+    localStorage.setItem('cookiesDecision', JSON.stringify({
+      necessary: true,
+      analytics: false,
+      ads: false
+    }));
+    banner.classList.remove('show');
+  };
+
+  config.onclick = () => {
+    modal.classList.add('show');
+    overlay.classList.add('show');
+  };
+
+  cancel.onclick = () => {
+    modal.classList.remove('show');
+    overlay.classList.remove('show');
+  };
+
+  save.onclick = () => {
+    const analytics = document.getElementById('analytics-cookies').checked;
+    const ads = document.getElementById('ads-cookies').checked;
+
+    localStorage.setItem('cookiesDecision', JSON.stringify({
+      necessary: true,
+      analytics: analytics,
+      ads: ads
+    }));
+
+    modal.classList.remove('show');
+    overlay.classList.remove('show');
+    banner.classList.remove('show');
+  };
+});
+
+// Открытие модального окна политики cookies
+document.querySelectorAll('a[href="#politica-cookies"]').forEach(link => {
+  link.addEventListener('click', (e) => {
+    e.preventDefault();
+    document.getElementById('cookies-policy-modal').style.display = 'flex';
+  });
+});
+
+// Закрытие окна
+document.getElementById('close-policy-modal').addEventListener('click', () => {
+  document.getElementById('cookies-policy-modal').style.display = 'none';
+});
+
+
+
+
+
+function loadGoogleAnalytics() {
+  const script = document.createElement('script');
+  script.async = true;
+  script.src = 'https://www.googletagmanager.com/gtag/js?id=G-QGGREKNJDX';
+  document.head.appendChild(script);
+
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QGGREKNJDX');
+}
+
+// Загружаем только если пользователь согласен
+document.addEventListener("DOMContentLoaded", () => {
+  const consent = JSON.parse(localStorage.getItem('cookiesDecision'));
+  if (consent && consent.analytics) {
+    loadGoogleAnalytics();
+  }
+});
+document.addEventListener('DOMContentLoaded', () => {
+  const ofertaLinks = document.querySelectorAll('.open-oferta');
+  const modalOferta = document.getElementById('modal-oferta');
+  const closeOferta = document.getElementById('close-oferta');
+
+  ofertaLinks.forEach(link => {
+    link.addEventListener('click', e => {
+      e.preventDefault();
+      modalOferta.style.display = 'flex';
+    });
+  });
+
+  closeOferta.addEventListener('click', () => {
+    modalOferta.style.display = 'none';
+  });
+
+  // Закрытие по клику вне окна
+  modalOferta.addEventListener('click', (e) => {
+    if (e.target === modalOferta) {
+      modalOferta.style.display = 'none';
+    }
+  });
+});
+
+
+
+ </script>
+
+ 
+
+
+
+
+
+</body>
+</html>
+
 
  
 
