--- a/index.html
+++ b/index.html
@@ -795,7 +795,11 @@ h1, h2, .hero-title {
   font-family: 'Lato', sans-serif !important;
 }
 
-   
+   .footnote,
+.footnote a {
+  font-family: 'Lato', sans-serif !important;
+}
+
 
 
   </style>
