--- a/index.html
+++ b/index.html
@@ -799,6 +799,24 @@ h1, h2, .hero-title {
 .footnote a {
   font-family: 'Lato', sans-serif !important;
 }
+p.footnote {
+  font-family: 'Lato', sans-serif !important;
+  font-size: 0.5rem !important;
+  opacity: 0.65 !important;
+  line-height: 1.5 !important;
+  max-width: 85vw !important;
+  margin-top: 1rem !important;
+  white-space: normal !important;
+  word-break: break-word !important;
+  text-transform: none !important;
+}
+
+p.footnote a {
+  font-family: 'Lato', sans-serif !important;
+  text-decoration: underline;
+  font-weight: 500;
+  color: #66ccff;
+}
 
 
 
