--- a/index.html
+++ b/index.html
@@ -817,6 +817,18 @@ p.footnote a {
   font-weight: 500;
   color: #66ccff;
 }
+/* Глобальное переопределение для .footnote и .modal */
+.footnote,
+.footnote a,
+.modal-content,
+.modal-content p,
+.modal-content h2 {
+  font-family: 'Lato', sans-serif !important;
+  font-size: 0.5rem !important;
+  line-height: 1.5 !important;
+  opacity: 0.65 !important;
+  text-transform: none !important;
+}
 
 
 
