--- a/index.html
+++ b/index.html
@@ -782,53 +782,31 @@ h1, h2, .hero-title {
   cursor: pointer;
 }
 
+/* Глобальное переопределение */
 .footnote,
-.footnote a,
-.modal-content,
-.modal-content p,
-.modal-content h2,
-.cookie-banner,
-.cookie-buttons button,
-.cookie-option,
-.modal-scroll,
-.side-content {
-  font-family: 'Lato', sans-serif !important;
-}
-
-   .footnote,
 .footnote a {
   font-family: 'Lato', sans-serif !important;
-}
-p.footnote {
-  font-family: 'Lato', sans-serif !important;
   font-size: 0.5rem !important;
-  opacity: 0.65 !important;
   line-height: 1.5 !important;
-  max-width: 85vw !important;
-  margin-top: 1rem !important;
+  opacity: 0.65 !important;
+  text-transform: none !important;
   white-space: normal !important;
   word-break: break-word !important;
-  text-transform: none !important;
-}
-
-p.footnote a {
-  font-family: 'Lato', sans-serif !important;
+  max-width: 85vw !important;
+  margin-top: 1rem !important;
+  color: #66ccff !important;
   text-decoration: underline;
   font-weight: 500;
-  color: #66ccff;
 }
-/* Глобальное переопределение для .footnote и .modal */
-.footnote,
-.footnote a,
-.modal-content,
-.modal-content p,
-.modal-content h2 {
-  font-family: 'Lato', sans-serif !important;
-  font-size: 0.5rem !important;
-  line-height: 1.5 !important;
-  opacity: 0.65 !important;
-  text-transform: none !important;
+
+/* Если нужно чуть меньше шрифт на мобильных */
+@media (max-width: 768px) {
+  .footnote {
+    font-size: 0.45rem !important;
+    max-width: 90vw !important;
+  }
 }
+
 
 
 
