--- a/index.html
+++ b/index.html
@@ -714,13 +714,21 @@ h1, h2, .hero-title {
 
  .footnote {
   font-family: 'Lato', sans-serif;
-  font-size: 0.5rem;
-  opacity: 0.65;
+  font-size: clamp(0.45rem, 1vw, 0.55rem);
   line-height: 1.5;
-  max-width: 85vw;
+  color: #66ccff;
+  opacity: 0.75;
   margin-top: 1rem;
+  max-width: 90vw;
+  text-transform: none;
   white-space: normal;
   word-break: break-word;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+.footnote + .footnote {
+  margin-top: 0.5rem;
 }
 
 .footnote a {
@@ -729,9 +737,6 @@ h1, h2, .hero-title {
   font-weight: 500;
 }
 
-.footnote + .footnote {
-  margin-top: 0.5rem;
-}
 
 @media (max-width: 768px) {
   .footnote {
