--- a/index.html
+++ b/index.html
@@ -714,15 +714,17 @@ h1, h2, .hero-title {
 
  .footnote {
   font-family: 'Lato', sans-serif;
-  font-size: clamp(0.45rem, 1vw, 0.55rem);
+  font-size: 0.5rem;
+  opacity: 0.65;
   line-height: 1.5;
-  color: #66ccff;
-  opacity: 0.75;
+  max-width: 85vw;
   margin-top: 1rem;
-  max-width: 90vw;
-  text-transform: none;
   white-space: normal;
   word-break: break-word;
+}
+
+.footnote a {
+  color: #66ccff; /* или #00c0ff */
   text-decoration: underline;
   font-weight: 500;
 }
@@ -730,13 +732,6 @@ h1, h2, .hero-title {
 .footnote + .footnote {
   margin-top: 0.5rem;
 }
-
-.footnote a {
-  color: #66ccff;
-  text-decoration: underline;
-  font-weight: 500;
-}
-
 
 @media (max-width: 768px) {
   .footnote {
@@ -756,7 +751,6 @@ h1, h2, .hero-title {
   display: flex;
   align-items: center;
   justify-content: center;
-  display: none; /* по умолчанию скрыто */
 }
 
 .modal-content {
@@ -787,6 +781,7 @@ h1, h2, .hero-title {
   font-size: 2rem;
   cursor: pointer;
 }
+
 
 
 
