--- a/index.html
+++ b/index.html
@@ -712,33 +712,7 @@ h1, h2, .hero-title {
     font-size: 0.65rem;
   }
 
- .footnote {
-  font-family: 'Lato', sans-serif;
-  font-size: 0.5rem;
-  opacity: 0.65;
-  line-height: 1.5;
-  max-width: 85vw;
-  margin-top: 1rem;
-  white-space: normal;
-  word-break: break-word;
-}
-
-.footnote a {
-  color: #66ccff; /* или #00c0ff */
-  text-decoration: underline;
-  font-weight: 500;
-}
-
-.footnote + .footnote {
-  margin-top: 0.5rem;
-}
-
-@media (max-width: 768px) {
-  .footnote {
-    font-size: 0.45rem;
-    max-width: 90vw;
-  }
-}
+ 
 
 
 .modal-oferta {
@@ -783,6 +757,26 @@ h1, h2, .hero-title {
   cursor: pointer;
 }
 
+.footnote {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.7rem;
+  opacity: 0.65;
+  line-height: 1.5;
+  max-width: 85vw;
+  margin-top: 1rem;
+  white-space: normal;
+  word-break: break-word;
+}
+
+.footnote a {
+  color: #66ccff;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+.footnote + .footnote {
+  margin-top: 0.5rem;
+}
 
 
 
