--- a/index.html
+++ b/index.html
@@ -778,6 +778,12 @@ h1, h2, .hero-title {
   margin-top: 0.5rem;
 }
 
+@media (max-width: 768px) {
+  .footnote {
+    font-size: 0.45rem;
+    max-width: 90vw;
+  }
+}
 
 
 
