--- a/index.html
+++ b/index.html
@@ -927,6 +927,10 @@ h1, h2, .hero-title {
 
 
 </section>
+
+
+
+<section id="spacer">
 <div class="spacer">
   <div class="spacer-inner">
     <h2 class="spacer-title">NUESTRA METODOLOGÍA</h2>
@@ -948,7 +952,7 @@ h1, h2, .hero-title {
     </div>
   </div>
 </div>
-
+</section>
 
 
 
