--- a/index.html
+++ b/index.html
@@ -765,6 +765,7 @@ h1, h2, .hero-title {
   cursor: pointer;
 }
 
+/* ✅ ОБЩИЙ стиль (для десктопа и всех) */
 .footnote {
   font-family: 'Lato', sans-serif;
   font-size: 0.6rem;
@@ -776,12 +777,14 @@ h1, h2, .hero-title {
   word-break: break-word;
 }
 
+/* ✅ ТОЛЬКО для мобильных */
 @media (max-width: 768px) {
   .footnote {
     font-size: 0.45rem;
     max-width: 90vw;
   }
 }
+
 
 
 
