--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
   word-break: break-word;
 }
 
+
+.footnote a {
+  color: #66ccff;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
 /* ✅ ТОЛЬКО для мобильных */
 @media (max-width: 767px) {
   .footnote {
