--- a/index.html
+++ b/index.html
@@ -641,6 +641,12 @@ h1, h2, .hero-title {
   margin-bottom: 20px;
 }
 
+
+#modal-oferta {
+  z-index: 10001; /* больше чем 9999 */
+}
+о
+
 .cookie-option {
   margin-bottom: 20px;
   font-size: 0.9rem;
