--- a/index.html
+++ b/index.html
@@ -777,7 +777,12 @@ h1, h2, .hero-title {
   justify-content: center;
   
 }
+
+.video-bg,
+.overlay {
+  pointer-events: none;
 }
+
 
 .modal-content {
   background: white;
