--- a/index.html
+++ b/index.html
@@ -783,6 +783,10 @@ h1, h2, .hero-title {
   pointer-events: none;
 }
 
+.modal-oferta {
+  border: 3px solid red;
+}
+
 
 .modal-content {
   background: white;
