--- a/index.html
+++ b/index.html
@@ -816,12 +816,12 @@ h1, h2, .hero-title {
 }
 
 .footnote-block {
-  margin-top: 2vh;      /* расстояние от кнопки */
-  margin-bottom: 6vh;   /* расстояние до низа экрана */
+ /* margin-top: 2vh;       расстояние от кнопки */
+  margin-bottom: 2%;   /* расстояние до низа экрана */
 }
 
 .footnote + .footnote {
-  margin-top: 0.3rem;   /* расстояние между строками */
+  margin-top: 0.1rem;   /* расстояние между строками */
 }
 
 
