--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ h1, h2, .hero-title {
 }
 
 .footnote-block {
- /* margin-top: 2vh;       расстояние от кнопки */
+  margin-top: 9vh;    /*   расстояние от кнопки */
   margin-bottom: 2%;   /* расстояние до низа экрана */
 }
 
