--- a/index.html
+++ b/index.html
@@ -1101,12 +1101,65 @@ h1, h2, .hero-title {
   <div class="modal-content">
     <button id="close-oferta" class="modal-close">&times;</button>
     <h2>Contrato de Oferta Pública</h2>
-    <p>Este contrato establece los términos de la oferta pública para nuestros servicios digitales.</p>
-    <p>Incluye procesos de conversión mediante campañas en Instagram, Facebook, Google Ads y métodos de pago en línea como PayPal.</p>
-    <p>Los resultados esperados, precios y condiciones específicas están detalladas en este contrato.</p>
-    <p>Para más información, contáctanos en: <a href="mailto:andrei@3dna.es">andrei@3dna.es</a></p>
+
+    <p><strong>Versión:</strong> 1.0 | <strong>Fecha de entrada en vigor:</strong> [dd/mm/aaaa]</p>
+
+    <h3>1. Objeto del Contrato</h3>
+    <p>El presente documento constituye una Oferta Pública vinculante emitida por el titular del sistema de captación automatizada (en adelante, "el Proveedor"), y tiene por objeto ofrecer acceso al uso de una estructura digital automatizada (la “funnel” o “embudo de conversión”), la cual se garantiza como operativa, funcional y completamente integrada desde el momento de la activación por parte del Usuario.</p>
+    <p>Al aceptar esta oferta mediante su uso o contratación, el Usuario acepta plenamente todos los términos aquí establecidos.</p>
+
+    <h3>2. Garantía de Funcionalidad</h3>
+    <p>El Proveedor garantiza que el sistema de funnel digital ha sido desarrollado, probado y desplegado en condiciones normales de funcionamiento.</p>
+    <ul>
+      <li>✔️ Se garantiza expresamente que la estructura es operativa desde el primer momento, incluyendo formularios, redireccionamientos, contenidos y flujos automatizados.</li>
+      <li>✔️ Esta garantía cubre únicamente la parte técnica de la estructura, no incluyendo resultados comerciales, tasas de conversión ni beneficios económicos derivados.</li>
+    </ul>
+
+    <h3>3. Condiciones de Uso</h3>
+    <ul>
+      <li>El Usuario puede utilizar libremente el sistema dentro de los parámetros definidos (por ejemplo, tráfico permitido, número de entradas, número de formularios activos).</li>
+      <li>El acceso al funnel podrá ser revocado, limitado o modificado por el Proveedor en cualquier momento sin previo aviso.</li>
+      <li>No se requiere pago obligatorio inicial salvo que se indique expresamente en un apartado especial.</li>
+    </ul>
+
+    <h3>4. Limitación de Responsabilidad</h3>
+    <p><strong>⚠️ IMPORTANTE:</strong> El Proveedor no se hace responsable bajo ninguna circunstancia por:</p>
+    <ul>
+      <li>Resultados económicos obtenidos o no obtenidos.</li>
+      <li>Errores cometidos por terceros que utilicen o accedan al sistema.</li>
+      <li>Interrupciones, bloqueos, problemas de red, servicios de hosting o plataformas externas.</li>
+      <li>Modificaciones hechas por el Usuario o cualquier tercero.</li>
+    </ul>
+    <p>El uso del funnel es bajo la responsabilidad total del Usuario, quien reconoce y acepta que el Proveedor no ofrece garantías implícitas de éxito comercial, rendimiento financiero ni adecuación para fines particulares.</p>
+
+    <h3>5. Propiedad Intelectual</h3>
+    <ul>
+      <li>Todo el contenido del funnel (estructura, diseño, textos, imágenes, flujos) es propiedad del Proveedor o sus licenciantes.</li>
+      <li>El Usuario no adquiere ningún derecho de propiedad, solo un derecho de uso limitado no exclusivo.</li>
+    </ul>
+
+    <h3>6. Duración y Terminación</h3>
+    <ul>
+      <li>Este contrato es válido desde el momento en que el Usuario accede o utiliza el funnel, sin necesidad de firma.</li>
+      <li>El Proveedor podrá suspender o finalizar el acceso sin previo aviso por cualquier motivo, incluyendo uso indebido, vulneración de derechos o por motivos técnicos.</li>
+    </ul>
+
+    <h3>7. Jurisdicción y Legislación Aplicable</h3>
+    <p>Este contrato se rige por las leyes del Reino de España. Cualquier controversia será resuelta en los tribunales del lugar de residencia del Proveedor.</p>
+
+    <h3>8. Disposiciones Finales</h3>
+    <ul>
+      <li>La aceptación del presente contrato implica que el Usuario ha leído, entendido y aceptado todos sus términos.</li>
+      <li>Este documento puede ser actualizado sin previo aviso. La versión publicada en el sitio tendrá validez inmediata.</li>
+    </ul>
+
+    <h3>✅ Resumen Legal (No vinculante)</h3>
+    <p>Usas el funnel, te garantizamos que funciona. Lo que consigas con él, ya depende de ti. Nosotros no nos hacemos responsables si algo sale mal o si no ganas dinero. Lo importante: todo está operativo desde el inicio.</p>
+
+    <p style="margin-top: 1em;">Para más información, contáctanos en: <a href="mailto:andrei@3dna.es">andrei@3dna.es</a></p>
   </div>
 </div>
+
 
 
 
