--- a/index.html
+++ b/index.html
@@ -1097,68 +1097,74 @@ h1, h2, .hero-title {
 </div>
 
 <!-- Modal: Contrato de Oferta Pública -->
+<!-- Modal: Contrato de Oferta Pública -->
 <div id="modal-oferta" class="modal-oferta" style="display: none;">
-  <div class="modal-content">
-    <button id="close-oferta" class="modal-close">&times;</button>
+  <div class="modal-content" style="overflow-y: auto; max-height: 90vh; padding: 1rem;">
+    <button id="close-oferta" class="modal-close" style="position: absolute; top: 1rem; right: 1rem;">&times;</button>
     <h2>Contrato de Oferta Pública</h2>
-
     <p><strong>Versión:</strong> 1.0 | <strong>Fecha de entrada en vigor:</strong> [dd/mm/aaaa]</p>
 
     <h3>1. Objeto del Contrato</h3>
-    <p>El presente documento constituye una Oferta Pública vinculante emitida por el titular del sistema de captación automatizada (en adelante, "el Proveedor"), y tiene por objeto ofrecer acceso al uso de una estructura digital automatizada (la “funnel” o “embudo de conversión”), la cual se garantiza como operativa, funcional y completamente integrada desde el momento de la activación por parte del Usuario.</p>
-    <p>Al aceptar esta oferta mediante su uso o contratación, el Usuario acepta plenamente todos los términos aquí establecidos.</p>
+    <p>El presente documento constituye una Oferta Pública con carácter vinculante, emitida por el titular de un sistema digital automatizado (en adelante, “el Proveedor”), y tiene como finalidad ofrecer acceso al uso de una estructura de conversión (embudo o “funnel”), la cual puede incluir formularios, páginas, flujos automatizados, integraciones con sistemas de pago, entre otros.</p>
+    <p>La aceptación y el uso de esta estructura implica que el Usuario acepta de forma expresa todos los términos aquí establecidos.</p>
 
     <h3>2. Garantía de Funcionalidad</h3>
-    <p>El Proveedor garantiza que el sistema de funnel digital ha sido desarrollado, probado y desplegado en condiciones normales de funcionamiento.</p>
     <ul>
-      <li>✔️ Se garantiza expresamente que la estructura es operativa desde el primer momento, incluyendo formularios, redireccionamientos, contenidos y flujos automatizados.</li>
-      <li>✔️ Esta garantía cubre únicamente la parte técnica de la estructura, no incluyendo resultados comerciales, tasas de conversión ni beneficios económicos derivados.</li>
+      <li>El Proveedor garantiza que el embudo digital ha sido diseñado, probado y activado en condiciones normales de funcionamiento.</li>
+      <li>La estructura se considera parte central de la identidad digital del Usuario, actuando como puente entre campañas y sistemas de pago.</li>
+      <li>Se garantiza el correcto funcionamiento de formularios, redirecciones, contenido, automatizaciones e integraciones externas (EmailJS, Telegram, Zapier, etc.).</li>
+      <li>Se garantiza la capacidad de aceptar pagos electrónicos y transferirlos a la cuenta proporcionada por el Usuario (ej. PayPal), siempre que el sistema externo esté configurado y disponible.</li>
+      <li>No se garantiza volumen de ventas, tráfico, conversión o éxito comercial. La garantía es exclusivamente técnica.</li>
     </ul>
 
     <h3>3. Condiciones de Uso</h3>
     <ul>
-      <li>El Usuario puede utilizar libremente el sistema dentro de los parámetros definidos (por ejemplo, tráfico permitido, número de entradas, número de formularios activos).</li>
-      <li>El acceso al funnel podrá ser revocado, limitado o modificado por el Proveedor en cualquier momento sin previo aviso.</li>
-      <li>No se requiere pago obligatorio inicial salvo que se indique expresamente en un apartado especial.</li>
+      <li>El Usuario puede utilizar el funnel dentro de los parámetros técnicos definidos.</li>
+      <li>El Proveedor podrá suspender o modificar el acceso por uso indebido, razones técnicas o contractuales.</li>
+      <li>El acceso puede ser gratuito, condicional o sujeto a acuerdos económicos.</li>
     </ul>
 
     <h3>4. Limitación de Responsabilidad</h3>
-    <p><strong>⚠️ IMPORTANTE:</strong> El Proveedor no se hace responsable bajo ninguna circunstancia por:</p>
+    <p><strong>El Proveedor no se hace responsable por:</strong></p>
     <ul>
-      <li>Resultados económicos obtenidos o no obtenidos.</li>
-      <li>Errores cometidos por terceros que utilicen o accedan al sistema.</li>
-      <li>Interrupciones, bloqueos, problemas de red, servicios de hosting o plataformas externas.</li>
-      <li>Modificaciones hechas por el Usuario o cualquier tercero.</li>
+      <li>Pérdidas económicas o beneficios no obtenidos.</li>
+      <li>Fallos de terceros (PayPal, hosting, DNS, etc.).</li>
+      <li>Contenido ilegal o fraudulento añadido por el Usuario.</li>
+      <li>Obligaciones fiscales o legales del Usuario.</li>
     </ul>
-    <p>El uso del funnel es bajo la responsabilidad total del Usuario, quien reconoce y acepta que el Proveedor no ofrece garantías implícitas de éxito comercial, rendimiento financiero ni adecuación para fines particulares.</p>
 
     <h3>5. Propiedad Intelectual</h3>
     <ul>
-      <li>Todo el contenido del funnel (estructura, diseño, textos, imágenes, flujos) es propiedad del Proveedor o sus licenciantes.</li>
-      <li>El Usuario no adquiere ningún derecho de propiedad, solo un derecho de uso limitado no exclusivo.</li>
+      <li>Todo el contenido técnico y visual es propiedad del Proveedor.</li>
+      <li>El Usuario obtiene solo un derecho de uso limitado, no exclusivo y no transferible.</li>
     </ul>
 
     <h3>6. Duración y Terminación</h3>
     <ul>
-      <li>Este contrato es válido desde el momento en que el Usuario accede o utiliza el funnel, sin necesidad de firma.</li>
-      <li>El Proveedor podrá suspender o finalizar el acceso sin previo aviso por cualquier motivo, incluyendo uso indebido, vulneración de derechos o por motivos técnicos.</li>
+      <li>Este contrato entra en vigor con el primer uso del sistema.</li>
+      <li>Vigencia indefinida, salvo notificación expresa.</li>
+      <li>El Proveedor podrá interrumpir el acceso sin previo aviso.</li>
     </ul>
 
-    <h3>7. Jurisdicción y Legislación Aplicable</h3>
-    <p>Este contrato se rige por las leyes del Reino de España. Cualquier controversia será resuelta en los tribunales del lugar de residencia del Proveedor.</p>
+    <h3>7. Legislación y Jurisdicción</h3>
+    <p>Este contrato se rige por la legislación española. En caso de disputa, las partes se someten a los tribunales del domicilio del Proveedor.</p>
 
     <h3>8. Disposiciones Finales</h3>
     <ul>
-      <li>La aceptación del presente contrato implica que el Usuario ha leído, entendido y aceptado todos sus términos.</li>
-      <li>Este documento puede ser actualizado sin previo aviso. La versión publicada en el sitio tendrá validez inmediata.</li>
+      <li>Este contrato podrá ser actualizado sin notificación previa.</li>
+      <li>En caso de traducción, prevalece la versión en español.</li>
     </ul>
 
-    <h3>✅ Resumen Legal (No vinculante)</h3>
-    <p>Usas el funnel, te garantizamos que funciona. Lo que consigas con él, ya depende de ti. Nosotros no nos hacemos responsables si algo sale mal o si no ganas dinero. Lo importante: todo está operativo desde el inicio.</p>
+    
 
-    <p style="margin-top: 1em;">Para más información, contáctanos en: <a href="mailto:andrei@3dna.es">andrei@3dna.es</a></p>
+    <hr style="margin: 2rem 0;">
+
+    <p><strong>Contacto legal:</strong> <a href="mailto:andrei@3dna.es">andrei@3dna.es</a></p>
+    <p><strong>Titular del sistema:</strong> Andrei Yafimenka</p>
+    <p><strong>NIF:</strong> Y9459881H</p>
   </div>
 </div>
+
 
 
 
